logs/22835573.err
Loading rhel8/default-ccl
  Loading requirement: ucx/1.15.0 rhel8/global rhel8/slurm
    rhel8/cclake-env/2024-06-01 rhel8/cclake/base glibc/2.28/gcc/4d2cj5pu
    gcc-runtime/13.3.0/gcc/2sn7kkm3 zlib-ng/2.1.6/gcc/mkjcey6m
    zstd/1.5.6/gcc/l5c7mfsx binutils/2.42/gcc/y33xj6rq
    intel-oneapi-compilers/2023.2.4/gcc/4lbvg4hv
    intel-oneapi-mpi/2021.12.1/intel/hlruk24n rhel8/cclake/intel
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/ab2927/rds/tSZPaint.py/tszpaint/paint/main.py", line 5, in <module>
    from tszpaint.paint.mock_data_generator import MockDataGenerator
  File "/home/ab2927/rds/tSZPaint.py/tszpaint/paint/mock_data_generator.py", line 7, in <module>
    from tszpaint.paint.abacus_loader import SimulationData
  File "/home/ab2927/rds/tSZPaint.py/tszpaint/paint/abacus_loader.py", line 51
    def obtain_redshift_range()
                               ^
SyntaxError: expected ':'
Command exited with non-zero status 1
	Command being timed: "/home/ab2927/.local/bin/uv run -m tszpaint.paint.main"
	User time (seconds): 2.20
	System time (seconds): 0.14
	Percent of CPU this job got: 40%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:05.80
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 108380
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 791
	Minor (reclaiming a frame) page faults: 24384
	Voluntary context switches: 5264
	Involuntary context switches: 71
	Swaps: 0
	File system inputs: 187976
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
srun: error: cpu-q-595: task 0: Exited with exit code 1
